correct plugin loading

--- a/scss/font-fira.scss
+++ b/scss/font-fira.scss
@@ -2,7 +2,4 @@
 
 // set defaults from simplest to most complex
 
-/* articles/font-fira *****************************/
-@import 'articles/font-fira';
-/* templates/font-fira *****************************/
-@import 'templates/font-fira';
+// @import 'Fira_Sans';
